Review Request 7154 PLS-2568 - fixed donut z-index issue - had to remove z-index specifications for sidebar navigation and other UI elements

--- a/le-ui/projects/common/assets/sass/_buttons.scss
+++ b/le-ui/projects/common/assets/sass/_buttons.scss
@@ -349,7 +349,6 @@ Use this structure for angled buttons:
         display: inline-block;
         padding: 14px 24px 10px 0;
         position: relative;
-        z-index: 2;
         transition: none;
         transform: skewX(-20deg);
         display: inline-block;
@@ -363,7 +362,6 @@ Use this structure for angled buttons:
         padding-bottom: 2px;
         margin-bottom: -1px;
         background: #fafafa;
-        z-index: 2;
         &:not(.clickable) {
           pointer-events: none;
         }
