--- a/le-ui/projects/common/assets/sass/_navigation.scss
+++ b/le-ui/projects/common/assets/sass/_navigation.scss
@@ -37,7 +37,6 @@ section.main-content {
     @include flex-item(1 1 auto);
     @include transition(padding $slide-transition ease);
     position: relative;
-    z-index: 1;
     padding-left: 60px;
     @media screen and (max-height: $max-height) {
         padding-left: 70px;
@@ -97,7 +96,7 @@ nav.primary-nav {
     top: 0;
     left: 0;
     bottom: 0;
-    z-index: 20; // for tabs to hide left edge of first tab since this used to be position fixed
+    z-index: 1; // for tabs to hide left edge of first tab since this used to be position fixed
     min-height: 100vh; // on page load make sure sidebar is 100% high
     width: 60px;
     min-width: 60px; // protection for IE
