--- a/le-ui/projects/common/assets/sass/_progress.scss
+++ b/le-ui/projects/common/assets/sass/_progress.scss
@@ -483,7 +483,7 @@ Wizard Steps
 			}
 			div {
 				position: relative;
-				z-index: 10;
+				z-index: 1;
 			}
 		}
 	}
