--- a/le-ui/projects/common/assets/sass/_summary.scss
+++ b/le-ui/projects/common/assets/sass/_summary.scss
@@ -7,6 +7,7 @@ Page Summary / Sub-Nav Headers
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
+  overflow: hidden;
   &.blue-steel {
     background-image: url("/assets/images/bkg-blue-steel.jpg");
   }
