--- a/le-ui/projects/leadprioritization/app/AppCommon/modules/menus/MenusStyles.scss
+++ b/le-ui/projects/leadprioritization/app/AppCommon/modules/menus/MenusStyles.scss
@@ -28,7 +28,6 @@
     position: relative;
     display: inline-block;
     vertical-align: top;
-    z-index: 20;
     &.ng-search {
         z-index: 11;
     } 
