--- a/le-ui/projects/leadprioritization/app/models/views/ModelListStyles.scss
+++ b/le-ui/projects/leadprioritization/app/models/views/ModelListStyles.scss
@@ -162,7 +162,6 @@ Model List
 .model-title {
     position: absolute;
     top: 0px;
-    z-index: 2;
     width: 100%;
     padding: 13px;
     word-wrap: break-word;
