--- a/le-ui/projects/leadprioritization/assets/styles/main.scss
+++ b/le-ui/projects/leadprioritization/assets/styles/main.scss
@@ -103,6 +103,7 @@ span.logo {
     -ms-transform: translateY(-50%);
     -o-transform: translateY(-50%);
     transform: translateY(-50%);
+    z-index: 1;
 }
 
 a#back-to-summary-link:hover {
